# bci-runtime

./: .dockerignore  .gitignore  Dockerfile  SETUP.md  bci-runtime.spec  bci.py  check_build.sh  check_plugin.sh  check_plugin2.sh  conftest.py  daemon_config.json  daemon_entry.py  demo.py  docker-compose.yml  game_context.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_system_demo.py  setup.py  shm_config.json  test_cross_process_signal.py  test_e2e.py  test_e2e_debug.py  test_race_scenario.py  test_shm_compat.c  test_signal_check.py  test_signal_debug.py  test_signal_debug2.py  test_signal_load.py  test_unity_signal_check.py
Editor/: BuildPlayer.cs
PROJECT_SYNAPSE_M_AND_A_OPERATIONS/: 01_Demo_Conference_Call_Script.md  02_LOI_Counter_Offer_Matrix.md  03_Final_Negotiation_Scripting_Guide.md  Outbound_Campaign_Tracker.csv
Runtime/: ScalpTopography.shader  ShmAutoReconnector.cs
board/: base.py  openbci.py
cluster/: cluster_load_balancer.py  cluster_worker_node.py
core/: arbitration_server.py  artifact_rejection.py  bridge_game_context.py  cect.py  ern_detector.py  manifold_alignment.py  motor_gate.py  native_bridge.py  network_gateway.py  orchestrator.py  profile_manager.py  riemannian.py  secure_gateway.py  shm_config.py  shm_gustation.py  spatial_filter.py  streaming_covariance.py  voting_ensemble.py
csharp_mock/: Program.cs  test_cross_process.py
examples/: bci_closed_loop.py
native/: Makefile  build_bridge.sh  build_bridge_wsl.sh  build_unix.sh  build_windows.bat  shm_defs.h
ops/: monitor_sandbox.sh
tests/: benchmark_covariance.py  ci_performance_profiler.py  generate_synthetic_eeg.py  test_cect.py  test_context_switch_overhead.py  test_crash_cleanup.py  test_csharp_mock.py  test_e2e_integration.py  test_ipc_latency_benchmark.py  test_native_bridge.py  test_neural_harness.py  test_orchestrator.py  test_shm_benchmark.py  test_shm_gustation.py  test_shm_signal.py
tools/: bci_benchmark.py  bci_diag.py  bci_replay.py  bci_return_monitor.py  (+5 more)
(+39 files in other folders)
